--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       name: 'DevOps Toolkit Wiki',
       loadSidebar: true,
       subMaxLevel: 3,
-      homepage: 'Knowledge-Base/Knowledge-Base.md'
+      homepage: 'Knowledge-Base.md'
     };
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
